cabal-version: 2.4

name:                   tokenswap
version:                1.0.0
description:            ASTOR Token Swap
license:                Apache-2.0
build-type:             Simple
extra-source-files:     README.md

Flag unexpected_thunks
  Description:   Turn on unexpected thunks checks
  Default:       False

common base
  build-depends: base >= 4.14 && < 4.15

common project-config
  default-language:     Haskell2010

  default-extensions:   NoImplicitPrelude
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
  import:               base, project-config
  cpp-options:          -DUNEXPECTED_THUNKS
  hs-source-dirs:       src

  exposed-modules:      Astor.Payout.MintTokens
                      , Astor.Payout.TokenSwap

  build-depends:        bytestring
                      , cardano-api
                      , containers
                      , plutus-ledger
                      , plutus-ledger-api
                      , plutus-tx
                      , plutus-tx-plugin
                      , serialise
                      , text

executable mint-tokens
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              mint-tokens.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        tokenswap
                      , cardano-api
                      , plutus-ledger-api
                      , bytestring

executable swap-tokens
  import:               base, project-config
  hs-source-dirs:       app
  main-is:              swap-tokens.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        tokenswap
                      , cardano-api
                      , plutus-ledger-api
                      , bytestring
